--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -1342,6 +1342,8 @@
     "power = np.power   #aliasing\n",
     "summarize = np.sum #aliasing\n",
     "\n",
+    "#You have to implement new equations for thetas\n",
+    "\n",
     "def gradient_prosty(X, y, theta, alpha, it):\n",
     "    # it - iteration nb.\n",
     "    m = len(X)\n",
